--- a/Inside_Card.html
+++ b/Inside_Card.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inside the Card</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Index.css">
 </head>
 <body>
     <div class="card">
@@ -23,7 +23,7 @@
         }
 
         function goBack() {
-            window.location.href = "Cover.html";
+            window.location.href = "Index.html";
         }
     </script>
 </body>
