--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="cover">
-        <h1>Happy Birthday, [Cousin's Name]!</h1>
-        <p>Tap to Open Your Birthday Surprise!</p>
+        <h1>Happy Birthday, Jack!</h1>
+        <p>Open</p>
         <button class="button" onclick="openCard()">Open Card</button>
     </div>
 
