--- a/Inside_Card.html
+++ b/Inside_Card.html
@@ -23,7 +23,7 @@
         }
 
         function goBack() {
-            window.location.href = "Index.html";
+            window.location.href = "index.html";
         }
     </script>
 </body>
