--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday!</title>
-    <link rel="stylesheet" href="Index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="cover">
@@ -15,7 +15,7 @@
 
     <script>
         function openCard() {
-            window.location.href = "Inside_Card.html";
+            window.location.href = "inside_Card.html";
         }
     </script>
 </body>
