--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <script>
         function openCard() {
-            window.location.href = "inside_Card.html";
+            window.location.href = "Inside_Card.html";
         }
     </script>
 </body>
