--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
     <div class="cover">
         <h1>Happy Birthday, Jack!</h1>
         <p>Open</p>
-        <button class="button" onclick="openCard()">Open Card</button>
+        <a href="Inside_Card.html" class="button">Open Card</a>
     </div>
-
-    <script>
-        function openCard() {
-            window.location.href = "Inside_Card.html";
-        }
-    </script>
 </body>
 </html>
