--- a/Inside_Card.html
+++ b/Inside_Card.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <div class="card">
-        <img src="https://upload.wikimedia.org/wikipedia/en/5/59/Warhammer_40k_logo.jpg" alt="Warhammer 40k Logo" class="warhammer-logo">
-        <h1>To the Greatest Cousin!</h1>
+        <img src="WARHAMMER_4021.JPG" alt="Warhammer 40k Logo" class="warhammer-logo">
+        <h1>To Commander Jack McIver</h1>
+        <p>The Emperor Protects!</p>
         <p>Wishing you an epic birthday filled with battles won and glory earned!</p>
         <p>You’re not just a cousin; you're a true warrior in my life’s crusade. Here’s to another year of conquest and victory!</p>
-        <p id="gift-message" style="display:none;">The Emperor Protects! Happy Birthday, Mighty Cousin!</p>
-        <button class="button" onclick="showMessage()">Receive the Blessing of the Emperor</button>
+        <p>From Will</p>
+        
+        <!-- Added closing quote -->
+        <p><em>Hope you had a great day with many more to come.</em></p>
+
         <button class="button" onclick="goBack()">Back to Cover</button>
     </div>
 
     <script>
-        function showMessage() {
-            document.getElementById('gift-message').style.display = 'block';
-        }
-
         function goBack() {
             window.location.href = "index.html";
         }
