--- a/Inside_Card.html
+++ b/Inside_Card.html
@@ -12,13 +12,13 @@
         <h1>To Commander Jack McIver</h1>
         <p>The Emperor Protects!</p>
         <p>Wishing you an epic birthday filled with battles won and glory earned!</p>
-        <p>You’re not just a cousin; you're a true warrior in my life’s crusade. Here’s to another year of conquest and victory!</p>
-        <p>From Will</p>
+        <p>You’re not just a cousin; you're a true friend in my life’s crusade. Here’s to another year of conquest and victory!</p>
+        
         
         <!-- Added closing quote -->
         <p><em>Hope you had a great day with many more to come.</em></p>
-
-        <button class="button" onclick="goBack()">Back to Cover</button>
+        <p>From Will</p>
+        <button class="button" onclick="goBack()">return to cover</button>
     </div>
 
     <script>
