--- a/Inside_Card.html
+++ b/Inside_Card.html
@@ -12,11 +12,16 @@
         <h1>To Commander Jack McIver</h1>
         <p>The Emperor Protects!</p>
         <p>Wishing you an epic birthday filled with battles won and glory earned!</p>
-        <p>You’re not just a cousin; you're a true friend in my life’s crusade. Here’s to another year of conquest and victory!</p>
+        <p>On this day of your naming, may the Emperor's light shine ever brighter upon your path.</p>
+        <p>You’re not just family; you're a true friend in my life’s crusade. Here’s to another year of conquest and victory!</p>
         
         
         <!-- Added closing quote -->
         <p><em>Hope you had a great day with many more to come.</em></p>
+
+        <div class="quote-style-3">
+            In His name, we shall know no fear.
+        </div>
         <p>From Will</p>
         <button class="button" onclick="goBack()">return to cover</button>
     </div>
