--- a/Inside_Card.html
+++ b/Inside_Card.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
         <img src="WARHAMMER_4021.JPG" alt="Warhammer 40k Logo" class="warhammer-logo">
-        <h1>To Commander Jack McIver</h1>
+        <h1>To Commander Jack</h1>
         <p>The Emperor Protects!</p>
         
         <p>Wishing you an epic birthday filled with battles won and glory earned!</p>
