--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday!</title>
+    <title>To Commander Jack!</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="cover">
-        <h1>Happy Birthday, Jack!</h1>
+        <h1>To Commander Jack</h1>
         <a href="Inside_Card.html" class="button">Open Card</a>
     </div>
 </body>
