--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Commander Jack!</title>
+    <title>Happy Birthday!</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="cover">
-        <h1>To Commander Jack</h1>
+        <!-- Image at the top -->
+        <img src="WARHAMMER_4021.JPG" alt="Warhammer 40k Logo" class="warhammer-logo">
+
+        <h1>Happy Birthday, Jack!</h1>
+        <p>Tap to Open Your Birthday Surprise!</p>
         <a href="Inside_Card.html" class="button">Open Card</a>
+        
+        <!-- Image at the bottom -->
+        <img src="WARHAMMER_4021.JPG" alt="Warhammer 40k Logo" class="warhammer-logo">
     </div>
 </body>
 </html>
