--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <div class="cover">
         <!-- Image at the top -->
-        <img src="WARHAMMER_4021.JPG" alt="Warhammer 40k Logo" class="warhammer-logo">
+        <img src="spacemarine symbol.png" alt="Warhammer 40k Logo" class="warhammer-logo">
 
         <h1>Happy Birthday, Jack!</h1>
         <p>Tap to Open Your Birthday Surprise!</p>
         <a href="Inside_Card.html" class="button">Open Card</a>
         
         <!-- Image at the bottom -->
-        <img src="WARHAMMER_4021.JPG" alt="Warhammer 40k Logo" class="warhammer-logo">
+        <img src="spacemarine symbol.png" alt="Warhammer 40k Logo" class="warhammer-logo">
     </div>
 </body>
 </html>
