--- a/Inside_Card.html
+++ b/Inside_Card.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card">
-        <img src="spacemarine symbol.png" alt="Warhammer 40k Logo" class="warhammer-logo">
+        <img src="spaceee.jpg" alt="Warhammer 40k Logo" class="warhammer-logo">
         
         <!-- Main Heading -->
         <h1 class="main-heading">Happy Birthday, Commander Jack</h1>
