--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <!-- Image at the top -->
         <img src="spaceee.jpg" alt="Warhammer 40k Logo" class="warhammer-logo">
 
-        <h1>Happy Birthday, Jack!</h1>
-        <p>Tap to Open Your Birthday Surprise!</p>
+        <h1>To Jack!</h1>
         <a href="Inside_Card.html" class="button">Open Card</a>
         
         <!-- Image at the bottom -->
