--- a/Inside_Card.html
+++ b/Inside_Card.html
@@ -25,7 +25,7 @@
         <!-- Smaller Final Line with New Style -->
         <p class="central-text-small">In His name, we shall know no fear.</p>
         
-        <p class="final-line">From Will</p>
+        <p class="final-line">From Julia, Bill, Aidan & Chloe</p>
 
         <!-- Return Button -->
         <a href="index.html" class="button">Return to Cover</a>
