--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="spaceee.jpg" alt="Warhammer 40k Logo" class="warhammer-logo">
 
         <h1>To Jack!</h1>
-        <a href="Inside_Card.html" class="button">Open Card</a>
+        <a href="Inside_Card.html" class="button">Open</a>
         
         <!-- Image at the bottom -->
         <img src="spaceee.jpg" alt="Warhammer 40k Logo" class="warhammer-logo">
