--- a/Inside_Card.html
+++ b/Inside_Card.html
@@ -28,7 +28,9 @@
         <p class="final-line">From Julia, Bill, Aidan & Chloe</p>
 
         <!-- Return Button -->
-        <a href="index.html" class="button">Return to Cover</a>
+        <a href="index.html" class="return-link">Return to Cover</a>
+        <!-- Image at the bottom -->
+        <img src="spaceee.jpg" alt="Warhammer 40k Logo" class="warhammer-logo">
     </div>
 </body>
 </html>
